--- a/src/styles/SectionGeneric.module.scss
+++ b/src/styles/SectionGeneric.module.scss
@@ -1,5 +1,5 @@
 .boxSection {
-  @apply relative bg-[#3E65F0] flex pb-[2vw];
+  @apply relative bg-[#3E65F0] flex w-full pb-[2vw];
 }
 
 .boxSectionDarkBlue {
